<?xml version="1.0" encoding="utf-8"?>
<!--

  Tip Time　全体レイアウト
  全体的にマテリアルデザインの基本的な指針に準拠してスタイルを適用してる
　
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <!-- サービス料金のテキストフィールド(数値のみ）-->
        <!-- マテリアルデザイン対応版 -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/const_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/const_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <!--アイコン-->
        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/const_of_service"
            app:layout_constraintBottom_toBottomOf="@id/const_of_service"
            />

        <!-- 説明文（マテリアルデザイン表示に対応） -->
        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_of_service_explain"
            app:layout_constraintStart_toEndOf="@id/icon_service"
            app:layout_constraintTop_toBottomOf="@id/const_of_service"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            />
        <ImageView
            android:id="@+id/icon_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            app:srcCompat="@drawable/ic_service" />

        <!-- サービス料金に上乗せするチップの割合（排他選択）（マテリアルデザイン表示に対応） -->
        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <!-- 20% -->
            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sel_service_top_level" />

            <!-- 18% -->
            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sel_service_middle_level" />

            <!-- 15% -->
            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sel_service_low_level" />

        </RadioGroup>

        <!-- アイコン -->
        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <!-- チップを切り上げるかSwitch（マテリアルデザイン） -->
        <!-- ConstraintLayoutではMATCH_PARENTは使わない。0dpを指定すること -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up_tip_explain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_round_up"
            app:layout_constraintTop_toBottomOf="@id/tip_options"
            android:layout_marginStart="16dp"/>

        <!-- 計算ボタン -->
        <Button
            android:id="@+id/calucate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_caluculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <!-- 結果の表示 -->
        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.TipTime.TextView"
            android:text="@string/result_tip_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calucate_button"
            tools:text="Tip Amount: $10"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>